# Prime

./: CMakeLists.txt  PrimeConfig.cmake.in  README.md  conanfile.py
include/Prime/: PrimeTest.h
src/: PrimeTest.cpp
